tests/integration/lsp/text_document/snapshots/integration__lsp__text_document__completion__theorem_end.snap
---
source: tests/integration/lsp/text_document/completion.rs
expression: "complete(r#\"\n%TEX main.tex\n%SRC \\newtheorem{lemma}{Lemma}\n%SRC \\begin{}\n%SRC \\end{lem\n%CUR       ^\n%1.1      ^^^\"#)?"
---
[
  {
    "detail": "user-defined",
    "kind": 1,
    "label": "lemma",
    "preselect": false,
    "sortText": "[sortText]",
    "textEdit": {
      "range": "[range]",
      "newText": "lemma"
    }
  }
]
